// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stage create named: names stage 1`] = `
Stage {
  "_config": Object {
    "name": "name",
  },
}
`;

exports[`stage create with Config: config stage 1`] = `
Stage {
  "_config": Object {
    "run": [Function],
  },
}
`;

exports[`stage create with Lambda 2: lambda stage 1`] = `
Stage {
  "_config": Object {
    "run": [Function],
  },
}
`;

exports[`stage create with Lambda 3: lambda stage 1`] = `
Stage {
  "_config": Object {
    "run": [Function],
  },
}
`;

exports[`stage create with function: function stage 1`] = `
Stage {
  "_config": Object {
    "run": [Function],
  },
}
`;

exports[`stage initialize other stuff sucessfully: schema stage 1 1`] = `
Stage {
  "_config": Object {
    "name": "stage",
    "run": [Function],
  },
}
`;

exports[`stage validate using schema 1`] = `[Error: data should be an object with a name property]`;
